--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,20 @@
 
 #main{
   flex: 1 0 auto;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
+h1{
+  display:block;
+  font-size:3rem;
+}
+
+p{
+  font-size:1.5rem;
+}
 
 footer{
   flex-shrink: 0;
